Slide Decks Moving to SDP Theme
Why:
* Conference using standard theme template for slide decks
* Want to use the same template

This change addresses the need by:
* Pulled reference to CEPR theme from webpage
* Converted JPEG banner theme to an SVG to insert on the title page
* Added title below banner
* Added presenter names on title slide
* Added Twitter and hashtag references in footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/solarized.css" id="theme">
+		<link rel="stylesheet" href="css/theme/simple.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -48,47 +48,25 @@
 			<div class="slides">
 
 				<!-- This would be the title slide -->
-				<section>
-					<h1>Using Git to Promote Collaboration and Reproducible Resarch</h1>
+				<section width="100%">
+					<p>
+						<img height="auto" width="29.25%" align="left" style="display: block; position: absolute; top: -50px; left: -5px; border:none; outline:none;" src="https://static.hwpi.harvard.edu/files/styles/os_files_xxlarge/public/cepr/files/cepr_logo_3color.png?m=1493107543&itok=LGbV97QB">
+						<img height="auto" width="auto" align="left" style="border:none; outline:none; display: block" src="img/banner.svg"/>
+					</p>
+					<span width="100%">
+						<h3 style="display: inline-block">Using Git to Promote Collaboration and Reproducible Resarch</h3>
+					</span>
+					<p>
+						<p style="font-size: 36px"><a href="https://github.com/nathant23">Nathan Trenholm</a>, <a href="https://www.datainsightpartners.com">Data Insight Partners</a> - Cohort 6 </p>
+						<p style="font-size: 36px"><a href="https://github.com/daphnejenkins">Daphne Jenkins</a>, <a href="http://www.fcps.net">Fayette County Public Schools</a> - Cohort 5</p>
+						<p style="font-size: 36px"><a href="https://github.com/jsonbecker">Jason Becker</a>, <a href="http://allovue.com/">Allovue</a> - Cohort 4</p>
+						<p style="font-size: 36px"><a href="https://github.com/wbuchanan">Billy Buchanan</a>, <a href="http://www.fcps.net">Fayette County Public Schools</a> - Cohort 5</p>
+					</p>
+					<p>
+						<a href="https://twitter.com/HarvardCEPR">@HarvardCEPR</a>  &#8226   <a href="https://twitter.com/search?q=%23SDPConvening&src=typd">#SDPConvening</a><br><br><br>
+					</p>
 				</section>
-				<section>	
-					<table style="font-size:93%">
-						<thead>
-							<tr>
-								<td style="border-top: 1px solid">Who</td>
-								<td style="border-top: 1px solid">What</td>
-								<td style="border-top: 1px solid">Where</td>
-								<td style="border-top: 1px solid">Cohort</td>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td style="border-bottom: none"><a href="https://github.com/nathant23">Nathan Trenholm</a></td>
-								<td style="border-bottom: none">Partner</td>
-								<td style="border-bottom: none"><a href="https://www.datainsightpartners.com">Data Insight Partners</a></td>
-								<td style="border-bottom: none">6</td>
-							</tr> 
-							<tr>
-								<td style="border-bottom: none"><a href="https://github.com/daphnejenkins">Daphne Jenkins</a></td>
-								<td style="border-bottom: none">Data Engineer</td>
-								<td style="border-bottom: none"><a href="http://www.fcps.net/">FCPS</a></td>
-								<td style="border-bottom: none">5</td>
-							</tr>
-							<tr>
-								<td style="border-bottom: none"><a href="https://github.com/jsonbecker">Jason Becker</a></td>
-								<td style="border-bottom: none">Chief Product Officer</td>
-								<td style="border-bottom: none"><a href="http://allovue.com/">Allovue</a></td>
-								<td style="border-bottom: none">4</td>
-							</tr>
-							<tr>
-								<td style="border-bottom: 1px solid"><a href="https://github.com/wbuchanan">Billy Buchanan</a></td>
-								<td style="border-bottom: 1px solid">Director of Data, Research, &amp; Accountability</td>
-								<td style="border-bottom: 1px solid"><a href="http://www.fcps.net/">FCPS</a></td>
-								<td style="border-bottom: 1px solid">5</td>
-							</tr>
-						</tbody>	
-					</table>
-					<br><br>
+				<section>
 					<div style="font-size:36px; font-weight:bold"><a href="https://wbuchanan.github.io/sdpConvening2017">Slides available at: https://wbuchanan.github.io/sdpConvening2017</a></div>
 				</section>
 
