Text in table elements on title slide are too large when rendered in browser when served up by GitHub.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 		<style type="text/css">
 			table .titlePageTable, tr, td {
-				font-size: 24px;
+				font-size: 18px;
 				border: none !important;
 			}
 		</style>
@@ -58,13 +58,13 @@
 				<!-- This would be the title slide -->
 				<section data-state="no-title-footer">
 					<div style="display: inline-block;">
-						<img height="auto" width="auto" align="left" style="display: block; position: relative;  border:none; outline:none;" src="img/CEPRlogo.svg">
-						<img height="auto" width="125%" align="left" style="display: block; position: relative;  border:none; outline:none;" src="img/conveningBanner.svg"/>
+						<img align="left" style="display: block; position: relative;  border:none; outline:none;" src="img/CEPRlogo.svg">
+						<img align="left" style="display: block; position: relative;  border:none; outline:none;" src="img/conveningBanner.svg"/>
 					</div>
-					<div align="left" width="100%" style="display: block;">
+					<div align="left" style="display: block;">
 						<h2>Using Git to Promote Collaboration and Reproducible Resarch</h2>
 					</div>
-					<div width="100%" style="display: block;">
+					<div style="display: inline-block;">
 						<table align="left" class="titlePageTable" style="display: inline-block;">
 							<tr>
 								<td><a href="https://github.com/nathant23">Nathan Trenholm</a></td><td>Partner</td><td><a href="https://www.datainsightpartners.com">Data Insight Partners</a></td><td>Cohort 6</td>
@@ -76,11 +76,11 @@
 								<td><a href="https://github.com/jsonbecker">Jason Becker</a></td><td>Chief Product Officer</td><td><a href="http://allovue.com/">Allovue</a></td><td>Cohort 4</td>
 							</tr>
 							<tr>
-								<td><a href="https://github.com/wbuchanan">Billy Buchanan</a></td><td style="font-size: 28px;">Director of Data, Research, &amp; Accountability</td><td><a href="http://www.fcps.net">Fayette County Public Schools</a></td><td>Cohort 5</td>
+								<td><a href="https://github.com/wbuchanan">Billy Buchanan</a></td><td style="font-size: 24px;">Director of Data, Research, &amp; Accountability</td><td><a href="http://www.fcps.net">Fayette County Public Schools</a></td><td>Cohort 5</td>
 							</tr>
 						</table>
 					</div>
-					<div width="100%" style="display: block;">
+					<div style="display: block;">
 						<p style="display: inline-block;">
 							<a href="https://twitter.com/HarvardCEPR">@HarvardCEPR</a>  &#8226   <a href="https://twitter.com/search?q=%23SDPConvening&src=typd">#SDPConvening</a><br><br><br>
 						</p>
