Text in table elements on title slide are too large when rendered in browser when served up by GitHub.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 				<!-- This would be the title slide -->
 				<section data-state="no-title-footer">
-					<div style="display: inline-block;">
+					<div style="display: inline-block; margin-top: -10%">
 						<img align="left" style="display: block; position: relative;  border:none; outline:none;" src="img/CEPRlogo.svg">
 						<img align="left" style="display: block; position: relative;  border:none; outline:none;" src="img/conveningBanner.svg"/>
 					</div>
