--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 				<!-- This would be the title slide -->
 				<section data-state="no-title-footer">
-					<div style="display: inline-block; margin-top: -5%">
+					<div style="display: inline-block;">
 						<img align="left" style="display: block; position: relative;  border:none; outline:none;" src="img/CEPRlogo.svg">
 						<img align="left" style="display: block; position: relative;  border:none; outline:none;" src="img/conveningBanner.svg"/>
 					</div>
