Illustration of idea related to issue #28
Added theme slides between major slides containing content to try providing a conceptual illustration of the typical workflow with Git (e.g., create repository, add files/code, commit the changes, push to remote repository, etc....

--- a/index.html
+++ b/index.html
@@ -143,20 +143,14 @@
 						Usefulness
 						</div>
 						<ul style="margin-top: 25px; margin-left: 65px;">
-							<li class="fragment visible" data-fragment-index="1">
-							My current work involves writing SQL queries against our SIS system to import, pull, update, and delete data.
+							<li class="fragment visible" data-fragment-index="1">My current work involves writing SQL queries against our SIS system to import, pull, update, and delete data.
 								<ul style="margin-top: 25px; font-weight: bold; color: blue;">
-									<li class="fragment visible" data-fragment-index="2">
-									The challenge is personal.
-									</li>
+									<li class="fragment visible" data-fragment-index="2">The challenge is personal.</li>
 								</ul>
 							</li>
-							<li style="margin-top: 25px;" class="fragment visible" data-fragment-index="3">
-							Future possibilities
+							<li style="margin-top: 25px;" class="fragment visible" data-fragment-index="3"> Future possibilities
 								<ul style="margin-top: 25px; font-weight: bold; color: blue;">
-									<li class="fragment visible" data-fragment-index="4">
-									The challenge can be overcome.
-									</li>
+									<li class="fragment visible" data-fragment-index="4">The challenge can be overcome.</li>
 								</ul>
 							</li>
 						</ul>
@@ -251,36 +245,21 @@
 					</section>
 					<section>
 						<h6 style="margin-top: 60px;"><b style="font-size: 2em;">G</b>iving <b style="font-size: 2em;">I</b>t <b style="font-size: 2em;">T</b>ime</h6>
-						<div style="text-align: left; font-size: 1.25em; font-weight: bold; text-decoration: underline;">
-						Learning
-						</div>
+						<div style="text-align: left; font-size: 1.25em; font-weight: bold; text-decoration: underline;">Learning</div>
 						<ul style="margin-top: 25px; margin-left: 65px;">
-							<li class="fragment visible" data-fragment-index="1">
-							Lingo
+							<li class="fragment visible" data-fragment-index="1">Lingo
 								<ul style="margin-top: 10px; font-size: smaller">
-									<li class="fragment visible" data-fragment-index="2">
-									GitHub, Git Shell, Gitignore, Pull Request, Push Request, Fork, Branch, etc.
-									</li>
+									<li class="fragment visible" data-fragment-index="2">GitHub, Git Shell, Gitignore, Pull Request, Push Request, Fork, Branch, etc.</li>
 								</ul>
 								<ul style="margin-top: 10px; font-weight: bold; color: blue;">
-									<li class="fragment visible" data-fragment-index="3">
-									The challenge is figuring out what everything means.
-									</li>
+									<li class="fragment visible" data-fragment-index="3">The challenge is figuring out what everything means.</li>
 								</ul>
 							</li>
-							<li style="margin-top: 25px;" class="fragment visible" data-fragment-index="4">
-							Helpful Resources
+							<li style="margin-top: 25px;" class="fragment visible" data-fragment-index="4">Helpful Resources
 								<ul style="margin-top: 15px;">
-									<li class="fragment visible" data-fragment-index="5">
-									Safari – <a href = http://www.safaribooksonline.com> www.safaribooksonline.com </a>
-									</li>
-									<li class="fragment visible" data-fragment-index="5">
-										<a href = https://help.github.com/> GitHub </a>
-										Help
-									</li>
-									<li style="margin-top: 15px; font-weight: bold; color: blue;" class="fragment visible" data-fragment-index="6">
-									The challenge is finding resources that work for you.
-									</li>
+									<li class="fragment visible" data-fragment-index="5">Safari – <a href = http://www.safaribooksonline.com> www.safaribooksonline.com </a></li>
+									<li class="fragment visible" data-fragment-index="5"><a href = https://help.github.com/> GitHub </a>Help</li>
+									<li style="margin-top: 15px; font-weight: bold; color: blue;" class="fragment visible" data-fragment-index="6">The challenge is finding resources that work for you.</li>
 								</ul>
 							</li>
 						</ul>
@@ -294,6 +273,7 @@
 					</section>
 				<!-- Now we have an end of a big section.  -->
 				</section>
+
 				<!-- For big sections we can use the up/down arrow keys for navigation (e.g., diving deeper into the content). -->
 				<section>
 
@@ -417,6 +397,46 @@ install.packages("revealjs", type = "source")
 							<li></li>
 						</ul>
 					</div>
+				</section>
+
+
+				<section>
+					<section>
+						<h2 style="font-family: monospace;">
+							cd productManagement<br>
+							git init <br>
+							vi securityConcerns.md
+						</h2>
+					</section>
+					<section>
+						<iframe width="1200" height="600" data-src="https://www.youtube.com/embed/edCj5rjrfe8?rel=0&showinfo=0&start=429&end=749" frameborder="0" allowfullscreen data-autoplay></iframe>
+						<aside class="notes">
+							<ul>
+								<li>I can personally attest that you don't want people who want to kill you to know your past, present, or future location.</li>
+								<li>The return on open sourcing your code may not be contributions, but I very well could be increasing the footprint of your impact well beyond your agency</li>
+								<li>Some staff from San Bernardino USD use some of my Stata code to solve cleaning assessment data</li>
+							</ul>
+						</aside>
+					</section>
+					<section>
+						<h2 style="font-family: monospace;">
+							:wq<br>
+							git add securityConcerns.md
+							vi yourRoadMap.md
+						</h2>
+					</section>
+					<section>
+						<ul>
+							<li>Bullet Point about product roadmaps</li>
+						</ul>
+					</section>
+					<section>
+						<h2 style="font-family: monospace;">
+							:wq<br>
+							git add yourRoadMap.md <br>
+							git push -u origin featureBranch
+						</h2>
+					</section>
 				</section>
 
 				<!-- Template for slides that would be used to create top to bottom navigation -->
